<resources>
    <string name="app_name">Just Java Test</string>
    <string name="edit_text_hint">Customer Name</string>

    <string name="toppings_header">Toppings</string>
    <string name="quantity_header">Quantity</string>
    <string name="price_header">Price</string>

    <string name="whipped_cream_topping">Whipped Cream</string>
    <string name="chocolate_topping">Chocolate</string>

    <string name="decrement_sign">-</string>
    <string name="null_value_quantity">0</string>
    <string name="increment_sign">+</string>

    <string name="null_value_price">$0</string>

    <string name="order_button">Order</string>

    <string name="below_zero_toast">You can\'t go below zero here.</string>
</resources>
